--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,13 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "league/tactician": "^1.0",
+        "ramsey/uuid": "^4.1",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/serializer": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
