--- a/composer.json
+++ b/composer.json
@@ -1,66 +1,71 @@
 {
-    "type": "project",
-    "license": "proprietary",
-    "require": {
-        "php": "^7.2.5",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "league/tactician": "^1.0",
-        "ramsey/uuid": "^4.1",
-        "symfony/console": "5.1.*",
-        "symfony/dotenv": "5.1.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.1.*",
-        "symfony/serializer": "5.1.*",
-        "symfony/yaml": "5.1.*"
+  "type": "project",
+  "license": "proprietary",
+  "require": {
+    "php": "^7.4",
+    "ext-ctype": "*",
+    "ext-iconv": "*",
+    "ext-json": "*",
+    "league/tactician": "^1.0",
+    "ramsey/uuid": "^4.1",
+    "symfony/console": "5.1.*",
+    "symfony/dotenv": "5.1.*",
+    "symfony/flex": "^1.3.1",
+    "symfony/framework-bundle": "5.1.*",
+    "symfony/monolog-bundle": "^3.5",
+    "symfony/serializer": "5.1.*",
+    "symfony/yaml": "5.1.*"
+  },
+  "require-dev": {
+    "symfony/browser-kit": "5.1.*",
+    "symfony/phpunit-bridge": "^5.1",
+    "symfony/var-dumper": "5.1.*"
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "preferred-install": {
+      "*": "dist"
     },
-    "require-dev": {
-    },
-    "config": {
-        "optimize-autoloader": true,
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "ForwardSo\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "ForwardSo\\Tests\\": "tests/"
-        }
-    },
-    "replace": {
-        "paragonie/random_compat": "2.*",
-        "symfony/polyfill-ctype": "*",
-        "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php72": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
-    "extra": {
-        "symfony": {
-            "allow-contrib": false,
-            "require": "5.1.*"
-        }
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-4": {
+      "ForwardSo\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "ForwardSo\\Tests\\": "tests/"
+    }
+  },
+  "replace": {
+    "paragonie/random_compat": "2.*",
+    "symfony/polyfill-ctype": "*",
+    "symfony/polyfill-iconv": "*",
+    "symfony/polyfill-php72": "*",
+    "symfony/polyfill-php71": "*",
+    "symfony/polyfill-php70": "*",
+    "symfony/polyfill-php56": "*"
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ]
+  },
+  "conflict": {
+    "symfony/symfony": "*"
+  },
+  "extra": {
+    "symfony": {
+      "allow-contrib": false,
+      "require": "5.1.*"
+    }
+  }
 }
