--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,14 @@
 {
   "type": "project",
-  "license": "proprietary",
+  "license": "mit",
   "require": {
     "php": "^7.4",
     "ext-ctype": "*",
     "ext-iconv": "*",
     "ext-json": "*",
+    "hashids/hashids": "^4.0",
     "league/tactician": "^1.0",
+    "league/tactician-bundle": "^1.2",
     "ramsey/uuid": "^4.1",
     "symfony/console": "5.1.*",
     "symfony/dotenv": "5.1.*",
